@@ -1,3 +1,7 @@
+2005-11-08  Jason Merrill  <jason@redhat.com>
+
+	* tree.h (CALL_FROM_THUNK_P): Add CALL_EXPR_CHECK.
+
 2005-11-08  Uros Bizjak  <uros@kss-loka.si>
 
 	PR target/19340
